# rust-mdl

./: Cargo.toml  README.md
.github/workflows/: pr-validations.yml
examples/end_to_end/: .env.example  .gitignore  README.md  main.rs
examples/end_to_end/config/: .gitignore  README.md  issuer-cert.pem
examples/end_to_end/fixtures/: portrait.base64  portrait.hex
src/: assemble.rs  auth.rs  client.rs  credentials.rs  error.rs  generate.rs  lib.rs  mdl.rs  on_hold.rs  revoke.rs  validate.rs
tests/: live_assemble.rs  live_generate.rs  live_on_hold.rs  live_validate.rs
