[package]
name = "rust-mdl"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Rust client for Blerify's Issuance API (ISO 18013-5 mDL)."

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["sync", "macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = "9"
uuid = { version = "1", features = ["v4"] }
thiserror = "1"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "test-util"] }
